doc: adicionado o README com gif

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ section {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: #121212;
+    background: #0d1117;
 }
 
 .bowl {
